>  - `low-random`: random low prices
>  - `high-random`: random high prices
>  - `starting-mirror`: high starting price, low midweek price, slightly higher ending price
>  - `ending-mirror`: mediocre starting price, low midweek price, high ending price
>  - `peak`: low starting and ending prices, high midweek price

### suggestions ✨
> - removed default reactions ⬆️ ↔️ ⬇️ from new posts

### support ✨
> - log messages relating to the role created to @mention the Moderation Team in tickets (in https://discord.com/channels/977254354589462618/1072945802256855170 and https://discord.com/channels/977254354589462618/1082650454044979210) are now automatically bulk-deleted within 1 minutes
>  - ..however, the "bulk delete" log isn't deleted (it's staying as a rough "reference" as to when tickets get created/deleted i guess)
> - appended "UwU pwease wate us 5 staws" to the support ratings message

## <:happ:906683365791502366> bugs fixed

### <a:slash_command:1148866611227414568> </currency shop:1116857516324827148>
> - fixed a duplicate response when viewing an item from bunny and halo

### support ✨
> - fixed your roblox username sometimes not being automatically filled in (if your account was verified through <@426537812993638400>) when creating a ticket in https://discord.com/channels/977254354589462618/1072945802256855170 or https://discord.com/channels/977254354589462618/1082650454044979210
>  - in other words, <@983126054619189370> was updated to use the <@426537812993638400> v4 api

## <@490178047325110282>'s notes

### footnote
> - ..</currency events:1116857516324827148>? oh, next time..
>  - <a:foxsleep:701941646719451146>



------------
==============
==============
------------
15/oct/2023



# https://discord.com/channels/977254354589462618/987047618918105118 v`3.5.1`

## <:happ:906683365791502366> bugs fixed

### <a:slash_command:1148866611227414568> </modmail:1162483301215391916>
> - fixed command not responding when not used in dms/flooded area community